--- a/.github/workflows/IaaC_destroy.yml
+++ b/.github/workflows/IaaC_destroy.yml
@@ -32,30 +32,30 @@ jobs:
         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    - name: HashiCorp - Setup Terraform
-      uses: hashicorp/setup-terraform@v1.2.1
+    # - name: HashiCorp - Setup Terraform
+    #   uses: hashicorp/setup-terraform@v1.2.1
       
-    - name: Verify Terraform version
-      run: terraform --version
+    # - name: Verify Terraform version
+    #   run: terraform --version
 
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    - name: Terraform Init
-      run: |
-           cd terraform \
-           && terraform init -migrate-state -input=false \
-           && terraform workspace select ${{ inputs.environment }}
+    # # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    # - name: Terraform Init
+    #   run: |
+    #        cd terraform \
+    #        && terraform init -migrate-state -input=false \
+    #        && terraform workspace select ${{ inputs.environment }}
 
-    # Generates an execution plan for Terraform
-    - name: Terraform Plan
-      run: |
-          cd terraform \
-          && terraform workspace select ${{ inputs.environment }} \
-          && terraform plan \
-          -var-file=${{ inputs.environment }}.tfvars
+    # # Generates an execution plan for Terraform
+    # - name: Terraform Plan
+    #   run: |
+    #       cd terraform \
+    #       && terraform workspace select ${{ inputs.environment }} \
+    #       && terraform plan \
+    #       -var-file=${{ inputs.environment }}.tfvars
 
-    - name: Terraform Destroy
-      run: |
-          cd terraform \
-          && terraform workspace select ${{ inputs.environment }} \
-          && terraform destroy -auto-approve \
-          -var-file=${{ inputs.environment }}.tfvars
+    # - name: Terraform Destroy
+    #   run: |
+    #       cd terraform \
+    #       && terraform workspace select ${{ inputs.environment }} \
+    #       && terraform destroy -auto-approve \
+    #       -var-file=${{ inputs.environment }}.tfvars
