--- a/.github/workflows/IaaC_deploy.yml
+++ b/.github/workflows/IaaC_deploy.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
     - name: 'Authenticate to Google Cloud'
       uses: 'google-github-actions/auth@v1'
