--- a/.github/workflows/IaaC_deploy.yml
+++ b/.github/workflows/IaaC_deploy.yml
@@ -31,42 +31,42 @@ jobs:
       with:
         credentials_json: '${{ secrets.GOOGLE_CREDENTIALS }}'
 
-    # # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    # - name: HashiCorp - Setup Terraform
-    #   uses: hashicorp/setup-terraform@v1.2.1
+    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+    - name: HashiCorp - Setup Terraform
+      uses: hashicorp/setup-terraform@v1.2.1
       
-    # - name: Verify Terraform version
-    #   run: terraform --version
+    - name: Verify Terraform version
+      run: terraform --version
       
-    # # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    # - name: Terraform Init
-    #   run: |
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: |
 
-    #       cd terraform && terraform init -migrate-state -input=false
-    #       if  terraform workspace new ${{ inputs.environment }}
-    #       then 
-    #       echo Workspace created
-    #       else
-    #       echo workspace already exists
-    #       fi
-    # # Generates an execution plan for Terraform
-    # - name: Terraform Init Upgrade
-    #   run: |
-    #       cd terraform \
-    #       && terraform workspace select ${{ inputs.environment }} \
-    #       && terraform init -upgrade
+          cd terraform && terraform init -migrate-state -input=false
+          if  terraform workspace new ${{ inputs.environment }}
+          then 
+          echo Workspace created
+          else
+          echo workspace already exists
+          fi
+    # Generates an execution plan for Terraform
+    - name: Terraform Init Upgrade
+      run: |
+          cd terraform \
+          && terraform workspace select ${{ inputs.environment }} \
+          && terraform init -upgrade
 
-    # - name: Terraform Plan
-    #   run: |
-    #       cd terraform \
-    #       && terraform workspace select ${{ inputs.environment }} \
-    #       && terraform plan \
-    #       -var-file=${{ inputs.environment }}.tfvars
+    - name: Terraform Plan
+      run: |
+          cd terraform \
+          && terraform workspace select ${{ inputs.environment }} \
+          && terraform plan \
+          -var-file=${{ inputs.environment }}.tfvars
   
-    # - name: Terraform Apply
-    #   run: |
-    #        cd terraform \
-    #        && terraform workspace select ${{ inputs.environment }} \
-    #        && terraform apply \
-    #        -auto-approve \
-    #        -var-file=${{ inputs.environment }}.tfvars
+    - name: Terraform Apply
+      run: |
+           cd terraform \
+           && terraform workspace select ${{ inputs.environment }} \
+           && terraform apply \
+           -auto-approve \
+           -var-file=${{ inputs.environment }}.tfvars
